--- a/Class_Redemption/Assembly-CSharp.csproj
+++ b/Class_Redemption/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Bombas\santa_bomba.cs" />
+    <Compile Include="Assets\Scripts\Bombas\santa_santa_granada.cs" />
     <Compile Include="Assets\Scripts\Player\CameraController.cs" />
     <Compile Include="Assets\Scripts\Player\UserController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
